data/derived/sp14/progs/unify/prog4338.ml.out
Characters 166-183:
  | Sine (e1)          -> Printf.sprintf"%s" (exprToString e1) 
                                             ^^^^^^^^^^^^^^^^^
Error: This expression has type string -> string
       but an expression was expected of type string
